Bug 1855427: The DOMLinkRemoved chrome event is not used anywhere. r=emilio

The event isn't dispatched correctly for DOM manipulations anymore. It is
dispatched when swapping docshells but we don't actually use this event anywhere
except tests so we might as well just remove it entirely.

Differential Revision: https://phabricator.services.mozilla.com/D192333